load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "app/buck2",
    "CARGO_PKG_AUTHORS": "",
    "CARGO_PKG_DESCRIPTION": "",
    "CARGO_PKG_HOMEPAGE": "",
    "CARGO_PKG_LICENSE": "MIT OR Apache-2.0",
    "CARGO_PKG_LICENSE_FILE": "",
    "CARGO_PKG_NAME": "buck2",
    "CARGO_PKG_README": "",
    "CARGO_PKG_REPOSITORY": "https://github.com/facebook/buck2",
    "CARGO_PKG_VERSION": "0.1.0",
    "CARGO_PKG_VERSION_MAJOR": "0",
    "CARGO_PKG_VERSION_MINOR": "1",
    "CARGO_PKG_VERSION_PATCH": "0",
    "CARGO_PKG_VERSION_PRE": "",
    }

rust_library(
    name = "buck2",
    crate_name = "buck2",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//app/buck2_action_impl:buck2_action_impl",
        "//app/buck2_analysis:buck2_analysis",
        "//app/buck2_anon_target:buck2_anon_target",
        "//app/buck2_build_api:buck2_build_api",
        "//app/buck2_build_info:buck2_build_info",
        "//app/buck2_build_signals:buck2_build_signals",
        "//app/buck2_build_signals_impl:buck2_build_signals_impl",
        "//app/buck2_bxl:buck2_bxl",
        "//app/buck2_certs:buck2_certs",
        "//app/buck2_cfg_constructor:buck2_cfg_constructor",
        "//app/buck2_client:buck2_client",
        "//app/buck2_client_ctx:buck2_client_ctx",
        "//app/buck2_cmd_audit_client:buck2_cmd_audit_client",
        "//app/buck2_cmd_audit_server:buck2_cmd_audit_server",
        "//app/buck2_cmd_completion_client:buck2_cmd_completion_client",
        "//app/buck2_cmd_debug_client:buck2_cmd_debug_client",
        "//app/buck2_cmd_docs_client:buck2_cmd_docs_client",
        "//app/buck2_cmd_docs_server:buck2_cmd_docs_server",
        "//app/buck2_cmd_log_client:buck2_cmd_log_client",
        "//app/buck2_cmd_query_server:buck2_cmd_query_server",
        "//app/buck2_cmd_rage_client:buck2_cmd_rage_client",
        "//app/buck2_cmd_starlark_client:buck2_cmd_starlark_client",
        "//app/buck2_cmd_starlark_server:buck2_cmd_starlark_server",
        "//app/buck2_cmd_targets_server:buck2_cmd_targets_server",
        "//app/buck2_common:buck2_common",
        "//app/buck2_configured:buck2_configured",
        "//app/buck2_core:buck2_core",
        "//app/buck2_daemon:buck2_daemon",
        "//app/buck2_data:buck2_data",
        "//app/buck2_error:buck2_error",
        "//app/buck2_event_log:buck2_event_log",
        "//app/buck2_event_observer:buck2_event_observer",
        "//app/buck2_events:buck2_events",
        "//app/buck2_external_cells:buck2_external_cells",
        "//app/buck2_forkserver:buck2_forkserver",
        "//app/buck2_fs:buck2_fs",
        "//app/buck2_interpreter_for_build:buck2_interpreter_for_build",
        "//app/buck2_query_impls:buck2_query_impls",
        "//app/buck2_server:buck2_server",
        "//app/buck2_server_commands:buck2_server_commands",
        "//app/buck2_test:buck2_test",
        "//app/buck2_test_runner:buck2_test_runner",
        "//app/buck2_transition:buck2_transition",
        "//app/buck2_util:buck2_util",
        "//app/buck2_validation:buck2_validation",
        "//app/buck2_wrapper_common:buck2_wrapper_common",
        "//gazebo/dupe:dupe",
        "//gazebo/gazebo:gazebo",
        "//host_sharing:host_sharing",
        "//shed/buck2_hash:buck2_hash",
        "//superconsole:superconsole",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)

rust_binary(
    name = "buck2_bin",
    crate_name = "buck2",
    crate_root = "bin/buck2.rs",
    srcs = ["bin/buck2.rs"],
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        ":buck2",
        "//app/buck2_action_impl:buck2_action_impl",
        "//app/buck2_analysis:buck2_analysis",
        "//app/buck2_anon_target:buck2_anon_target",
        "//app/buck2_build_api:buck2_build_api",
        "//app/buck2_build_info:buck2_build_info",
        "//app/buck2_build_signals:buck2_build_signals",
        "//app/buck2_build_signals_impl:buck2_build_signals_impl",
        "//app/buck2_bxl:buck2_bxl",
        "//app/buck2_certs:buck2_certs",
        "//app/buck2_cfg_constructor:buck2_cfg_constructor",
        "//app/buck2_client:buck2_client",
        "//app/buck2_client_ctx:buck2_client_ctx",
        "//app/buck2_cmd_audit_client:buck2_cmd_audit_client",
        "//app/buck2_cmd_audit_server:buck2_cmd_audit_server",
        "//app/buck2_cmd_completion_client:buck2_cmd_completion_client",
        "//app/buck2_cmd_debug_client:buck2_cmd_debug_client",
        "//app/buck2_cmd_docs_client:buck2_cmd_docs_client",
        "//app/buck2_cmd_docs_server:buck2_cmd_docs_server",
        "//app/buck2_cmd_log_client:buck2_cmd_log_client",
        "//app/buck2_cmd_query_server:buck2_cmd_query_server",
        "//app/buck2_cmd_rage_client:buck2_cmd_rage_client",
        "//app/buck2_cmd_starlark_client:buck2_cmd_starlark_client",
        "//app/buck2_cmd_starlark_server:buck2_cmd_starlark_server",
        "//app/buck2_cmd_targets_server:buck2_cmd_targets_server",
        "//app/buck2_common:buck2_common",
        "//app/buck2_configured:buck2_configured",
        "//app/buck2_core:buck2_core",
        "//app/buck2_daemon:buck2_daemon",
        "//app/buck2_data:buck2_data",
        "//app/buck2_error:buck2_error",
        "//app/buck2_event_log:buck2_event_log",
        "//app/buck2_event_observer:buck2_event_observer",
        "//app/buck2_events:buck2_events",
        "//app/buck2_external_cells:buck2_external_cells",
        "//app/buck2_forkserver:buck2_forkserver",
        "//app/buck2_fs:buck2_fs",
        "//app/buck2_interpreter_for_build:buck2_interpreter_for_build",
        "//app/buck2_query_impls:buck2_query_impls",
        "//app/buck2_server:buck2_server",
        "//app/buck2_server_commands:buck2_server_commands",
        "//app/buck2_test:buck2_test",
        "//app/buck2_test_runner:buck2_test_runner",
        "//app/buck2_transition:buck2_transition",
        "//app/buck2_util:buck2_util",
        "//app/buck2_validation:buck2_validation",
        "//app/buck2_wrapper_common:buck2_wrapper_common",
        "//gazebo/dupe:dupe",
        "//gazebo/gazebo:gazebo",
        "//host_sharing:host_sharing",
        "//shed/buck2_hash:buck2_hash",
        "//superconsole:superconsole",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)
