load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "app/buck2_build_api",
    "CARGO_PKG_AUTHORS": "",
    "CARGO_PKG_DESCRIPTION": "Build related interpreter defs, coercion logic, some build rule impelementations, and handing actions off to DICE for caching and execution. A large chunk of the 'build' part of BuckV2",
    "CARGO_PKG_HOMEPAGE": "",
    "CARGO_PKG_LICENSE": "MIT OR Apache-2.0",
    "CARGO_PKG_LICENSE_FILE": "",
    "CARGO_PKG_NAME": "buck2_build_api",
    "CARGO_PKG_README": "",
    "CARGO_PKG_REPOSITORY": "https://github.com/facebook/buck2",
    "CARGO_PKG_VERSION": "0.1.0",
    "CARGO_PKG_VERSION_MAJOR": "0",
    "CARGO_PKG_VERSION_MINOR": "1",
    "CARGO_PKG_VERSION_PATCH": "0",
    "CARGO_PKG_VERSION_PRE": "",
    }

rust_library(
    name = "buck2_build_api",
    crate_name = "buck2_build_api",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//allocative/allocative:allocative",
        "//app/buck2_artifact:buck2_artifact",
        "//app/buck2_build_info:buck2_build_info",
        "//app/buck2_build_signals:buck2_build_signals",
        "//app/buck2_cli_proto:buck2_cli_proto",
        "//app/buck2_common:buck2_common",
        "//app/buck2_core:buck2_core",
        "//app/buck2_data:buck2_data",
        "//app/buck2_directory:buck2_directory",
        "//app/buck2_error:buck2_error",
        "//app/buck2_errorformat:buck2_errorformat",
        "//app/buck2_event_observer:buck2_event_observer",
        "//app/buck2_events:buck2_events",
        "//app/buck2_execute:buck2_execute",
        "//app/buck2_file_watcher:buck2_file_watcher",
        "//app/buck2_fs:buck2_fs",
        "//app/buck2_http:buck2_http",
        "//app/buck2_interpreter:buck2_interpreter",
        "//app/buck2_node:buck2_node",
        "//app/buck2_query:buck2_query",
        "//app/buck2_test_api:buck2_test_api",
        "//app/buck2_util:buck2_util",
        "//app/buck2_wrapper_common:buck2_wrapper_common",
        "//buck2_sketches:buck2_sketches",
        "//dice/dice:dice",
        "//dice/dice_futures:dice_futures",
        "//gazebo/display_container:display_container",
        "//gazebo/dupe:dupe",
        "//gazebo/gazebo:gazebo",
        "//gazebo/strong_hash:strong_hash",
        "//pagable:pagable",
        "//remote_execution/oss/re_grpc:remote_execution",
        "//shed/buck2_hash:buck2_hash",
        "//shed/setsketch:setsketch",
        "//starlark-rust/starlark:starlark",
        "//starlark-rust/starlark_map:starlark_map",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [
        "//app/buck2_build_api_derive:buck2_build_api_derive",
    ],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)
