load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "app/buck2_cmd_starlark_server",
    "CARGO_PKG_AUTHORS": "",
    "CARGO_PKG_DESCRIPTION": "`buck2 starlark` command server implementation",
    "CARGO_PKG_HOMEPAGE": "",
    "CARGO_PKG_LICENSE": "MIT OR Apache-2.0",
    "CARGO_PKG_LICENSE_FILE": "",
    "CARGO_PKG_NAME": "buck2_cmd_starlark_server",
    "CARGO_PKG_README": "",
    "CARGO_PKG_REPOSITORY": "https://github.com/facebook/buck2",
    "CARGO_PKG_VERSION": "0.1.0",
    "CARGO_PKG_VERSION_MAJOR": "0",
    "CARGO_PKG_VERSION_MINOR": "1",
    "CARGO_PKG_VERSION_PATCH": "0",
    "CARGO_PKG_VERSION_PRE": "",
    }

rust_library(
    name = "buck2_cmd_starlark_server",
    crate_name = "buck2_cmd_starlark_server",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//app/buck2_cli_proto:buck2_cli_proto",
        "//app/buck2_client_ctx:buck2_client_ctx",
        "//app/buck2_cmd_starlark_client:buck2_cmd_starlark_client",
        "//app/buck2_common:buck2_common",
        "//app/buck2_core:buck2_core",
        "//app/buck2_data:buck2_data",
        "//app/buck2_error:buck2_error",
        "//app/buck2_events:buck2_events",
        "//app/buck2_fs:buck2_fs",
        "//app/buck2_interpreter:buck2_interpreter",
        "//app/buck2_interpreter_for_build:buck2_interpreter_for_build",
        "//app/buck2_server_ctx:buck2_server_ctx",
        "//dice/dice:dice",
        "//gazebo/dupe:dupe",
        "//shed/buck2_hash:buck2_hash",
        "//starlark-rust/starlark:starlark",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)
