load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "app/buck2_execute_impl",
    "CARGO_PKG_AUTHORS": "",
    "CARGO_PKG_DESCRIPTION": "Implementations of executors and materializers",
    "CARGO_PKG_HOMEPAGE": "",
    "CARGO_PKG_LICENSE": "MIT OR Apache-2.0",
    "CARGO_PKG_LICENSE_FILE": "",
    "CARGO_PKG_NAME": "buck2_execute_impl",
    "CARGO_PKG_README": "",
    "CARGO_PKG_REPOSITORY": "https://github.com/facebook/buck2",
    "CARGO_PKG_VERSION": "0.1.0",
    "CARGO_PKG_VERSION_MAJOR": "0",
    "CARGO_PKG_VERSION_MINOR": "1",
    "CARGO_PKG_VERSION_PATCH": "0",
    "CARGO_PKG_VERSION_PRE": "",
    }

rust_library(
    name = "buck2_execute_impl",
    crate_name = "buck2_execute_impl",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//allocative/allocative:allocative",
        "//app/buck2_action_metadata_proto:buck2_action_metadata_proto",
        "//app/buck2_build_signals:buck2_build_signals",
        "//app/buck2_cli_proto:buck2_cli_proto",
        "//app/buck2_common:buck2_common",
        "//app/buck2_core:buck2_core",
        "//app/buck2_data:buck2_data",
        "//app/buck2_directory:buck2_directory",
        "//app/buck2_error:buck2_error",
        "//app/buck2_events:buck2_events",
        "//app/buck2_execute:buck2_execute",
        "//app/buck2_execute_local:buck2_execute_local",
        "//app/buck2_forkserver:buck2_forkserver",
        "//app/buck2_forkserver_proto:buck2_forkserver_proto",
        "//app/buck2_fs:buck2_fs",
        "//app/buck2_http:buck2_http",
        "//app/buck2_resource_control:buck2_resource_control",
        "//app/buck2_util:buck2_util",
        "//app/buck2_worker_proto:buck2_worker_proto",
        "//app/buck2_wrapper_common:buck2_wrapper_common",
        "//dice/dice_futures:dice_futures",
        "//gazebo/dupe:dupe",
        "//gazebo/gazebo:gazebo",
        "//host_sharing:host_sharing",
        "//remote_execution/oss/re_grpc:remote_execution",
        "//shed/buck2_hash:buck2_hash",
        "//starlark-rust/starlark_map:starlark_map",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)
