load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "app/buck2_server",
    "CARGO_PKG_AUTHORS": "",
    "CARGO_PKG_DESCRIPTION": "Some parts of Buck2 server",
    "CARGO_PKG_HOMEPAGE": "",
    "CARGO_PKG_LICENSE": "MIT OR Apache-2.0",
    "CARGO_PKG_LICENSE_FILE": "",
    "CARGO_PKG_NAME": "buck2_server",
    "CARGO_PKG_README": "",
    "CARGO_PKG_REPOSITORY": "https://github.com/facebook/buck2",
    "CARGO_PKG_VERSION": "0.1.0",
    "CARGO_PKG_VERSION_MAJOR": "0",
    "CARGO_PKG_VERSION_MINOR": "1",
    "CARGO_PKG_VERSION_PATCH": "0",
    "CARGO_PKG_VERSION_PRE": "",
    }

rust_library(
    name = "buck2_server",
    crate_name = "buck2_server",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//allocative/allocative:allocative",
        "//app/buck2_analysis:buck2_analysis",
        "//app/buck2_build_api:buck2_build_api",
        "//app/buck2_build_signals:buck2_build_signals",
        "//app/buck2_certs:buck2_certs",
        "//app/buck2_cli_proto:buck2_cli_proto",
        "//app/buck2_common:buck2_common",
        "//app/buck2_configured:buck2_configured",
        "//app/buck2_core:buck2_core",
        "//app/buck2_data:buck2_data",
        "//app/buck2_directory:buck2_directory",
        "//app/buck2_error:buck2_error",
        "//app/buck2_event_observer:buck2_event_observer",
        "//app/buck2_events:buck2_events",
        "//app/buck2_execute:buck2_execute",
        "//app/buck2_execute_impl:buck2_execute_impl",
        "//app/buck2_file_watcher:buck2_file_watcher",
        "//app/buck2_forkserver:buck2_forkserver",
        "//app/buck2_fs:buck2_fs",
        "//app/buck2_http:buck2_http",
        "//app/buck2_interpreter:buck2_interpreter",
        "//app/buck2_interpreter_for_build:buck2_interpreter_for_build",
        "//app/buck2_node:buck2_node",
        "//app/buck2_profile:buck2_profile",
        "//app/buck2_re_configuration:buck2_re_configuration",
        "//app/buck2_resource_control:buck2_resource_control",
        "//app/buck2_server_ctx:buck2_server_ctx",
        "//app/buck2_server_starlark_debug:buck2_server_starlark_debug",
        "//app/buck2_subscription_proto:buck2_subscription_proto",
        "//app/buck2_test:buck2_test",
        "//app/buck2_util:buck2_util",
        "//app/buck2_validation:buck2_validation",
        "//app/buck2_wrapper_common:buck2_wrapper_common",
        "//dice/dice:dice",
        "//dice/dice_futures:dice_futures",
        "//gazebo/dupe:dupe",
        "//gazebo/gazebo:gazebo",
        "//host_sharing:host_sharing",
        "//pagable:pagable",
        "//shed/buck2_hash:buck2_hash",
        "//starlark-rust/starlark:starlark",
        "//starlark-rust/starlark_lsp:starlark_lsp",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)
