load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "app/buck2_test",
    "CARGO_PKG_AUTHORS": "",
    "CARGO_PKG_DESCRIPTION": "Buck V2 test runner",
    "CARGO_PKG_HOMEPAGE": "",
    "CARGO_PKG_LICENSE": "MIT OR Apache-2.0",
    "CARGO_PKG_LICENSE_FILE": "",
    "CARGO_PKG_NAME": "buck2_test",
    "CARGO_PKG_README": "",
    "CARGO_PKG_REPOSITORY": "https://github.com/facebook/buck2",
    "CARGO_PKG_VERSION": "0.1.0",
    "CARGO_PKG_VERSION_MAJOR": "0",
    "CARGO_PKG_VERSION_MINOR": "1",
    "CARGO_PKG_VERSION_PATCH": "0",
    "CARGO_PKG_VERSION_PRE": "",
    }

rust_library(
    name = "buck2_test",
    crate_name = "buck2_test",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//allocative/allocative:allocative",
        "//app/buck2_build_api:buck2_build_api",
        "//app/buck2_build_signals:buck2_build_signals",
        "//app/buck2_cli_proto:buck2_cli_proto",
        "//app/buck2_common:buck2_common",
        "//app/buck2_core:buck2_core",
        "//app/buck2_data:buck2_data",
        "//app/buck2_downward_api:buck2_downward_api",
        "//app/buck2_error:buck2_error",
        "//app/buck2_events:buck2_events",
        "//app/buck2_execute:buck2_execute",
        "//app/buck2_execute_impl:buck2_execute_impl",
        "//app/buck2_fs:buck2_fs",
        "//app/buck2_grpc:buck2_grpc",
        "//app/buck2_interpreter:buck2_interpreter",
        "//app/buck2_interpreter_for_build:buck2_interpreter_for_build",
        "//app/buck2_node:buck2_node",
        "//app/buck2_resource_control:buck2_resource_control",
        "//app/buck2_server_ctx:buck2_server_ctx",
        "//app/buck2_test_api:buck2_test_api",
        "//app/buck2_util:buck2_util",
        "//dice/dice:dice",
        "//dice/dice_futures:dice_futures",
        "//gazebo/display_container:display_container",
        "//gazebo/dupe:dupe",
        "//host_sharing:host_sharing",
        "//pagable:pagable",
        "//remote_execution/oss/re_grpc:remote_execution",
        "//shed/buck2_hash:buck2_hash",
        "//starlark-rust/starlark:starlark",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [
        "//app/buck2_error_derive:buck2_error_derive",
    ],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)
