load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "app/buck2_transition",
    "CARGO_PKG_AUTHORS": "",
    "CARGO_PKG_DESCRIPTION": "Implementation of configuration transition",
    "CARGO_PKG_HOMEPAGE": "",
    "CARGO_PKG_LICENSE": "MIT OR Apache-2.0",
    "CARGO_PKG_LICENSE_FILE": "",
    "CARGO_PKG_NAME": "buck2_transition",
    "CARGO_PKG_README": "",
    "CARGO_PKG_REPOSITORY": "https://github.com/facebook/buck2",
    "CARGO_PKG_VERSION": "0.1.0",
    "CARGO_PKG_VERSION_MAJOR": "0",
    "CARGO_PKG_VERSION_MINOR": "1",
    "CARGO_PKG_VERSION_PATCH": "0",
    "CARGO_PKG_VERSION_PRE": "",
    }

rust_library(
    name = "buck2_transition",
    crate_name = "buck2_transition",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//allocative/allocative:allocative",
        "//app/buck2_analysis:buck2_analysis",
        "//app/buck2_build_api:buck2_build_api",
        "//app/buck2_common:buck2_common",
        "//app/buck2_core:buck2_core",
        "//app/buck2_error:buck2_error",
        "//app/buck2_events:buck2_events",
        "//app/buck2_interpreter:buck2_interpreter",
        "//app/buck2_node:buck2_node",
        "//dice/dice:dice",
        "//dice/dice_futures:dice_futures",
        "//gazebo/dupe:dupe",
        "//gazebo/gazebo:gazebo",
        "//pagable:pagable",
        "//shed/buck2_hash:buck2_hash",
        "//starlark-rust/starlark:starlark",
        "//starlark-rust/starlark_map:starlark_map",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [
        "//app/buck2_build_api_derive:buck2_build_api_derive",
    ],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)
