load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "app/buck2_validation",
    "CARGO_PKG_AUTHORS": "",
    "CARGO_PKG_DESCRIPTION": "This crate defines the implementation logic for validation functionality.\n",
    "CARGO_PKG_HOMEPAGE": "",
    "CARGO_PKG_LICENSE": "MIT OR Apache-2.0",
    "CARGO_PKG_LICENSE_FILE": "",
    "CARGO_PKG_NAME": "buck2_validation",
    "CARGO_PKG_README": "",
    "CARGO_PKG_REPOSITORY": "https://github.com/facebook/buck2",
    "CARGO_PKG_VERSION": "0.1.0",
    "CARGO_PKG_VERSION_MAJOR": "0",
    "CARGO_PKG_VERSION_MINOR": "1",
    "CARGO_PKG_VERSION_PATCH": "0",
    "CARGO_PKG_VERSION_PRE": "",
    }

rust_library(
    name = "buck2_validation",
    crate_name = "buck2_validation",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//allocative/allocative:allocative",
        "//app/buck2_artifact:buck2_artifact",
        "//app/buck2_build_api:buck2_build_api",
        "//app/buck2_core:buck2_core",
        "//app/buck2_error:buck2_error",
        "//app/buck2_execute:buck2_execute",
        "//app/buck2_fs:buck2_fs",
        "//dice/dice:dice",
        "//dice/dice_error:dice_error",
        "//gazebo/dupe:dupe",
        "//pagable:pagable",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)
